migration database relprev

--- a/Infraero.Relprev.Domain/Infraero.Relprev.Domain.csproj
+++ b/Infraero.Relprev.Domain/Infraero.Relprev.Domain.csproj
@@ -6,4 +6,8 @@
     <AssemblyName>Infraero.Relprev.Domain</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0" />
+  </ItemGroup>
+
 </Project>
