--- a/Infraero.Relprev.Api/Infraero.Relprev.Api.csproj
+++ b/Infraero.Relprev.Api/Infraero.Relprev.Api.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infraero.Relprev.Application\Infraero.Relprev.Application.csproj" />
+    <ProjectReference Include="..\Infraero.Relprev.Infrastructure\Infraero.Relprev.Infrastructure.csproj" />
   </ItemGroup>
 
 
