gerando token jwt

--- a/Infraero.Relprev.Api/appsettings.json
+++ b/Infraero.Relprev.Api/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-VOBCP3S;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "AppSettings": {
+    "Secret": "?kI&OA!\\{0YFWFOdp+4zRtpaPubKz1`OULLlM=_q0cGt%qWt'zvNI0=9KQUNqoV", //https://www.grc.com/passwords.htm
+    "ExpiracaoHoras": 2,
+    "Emissor": "Relprev",
+    "ValidoEm": "https://localhost"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
