--- a/Infraero.Relprev.WebUi/Infraero.Relprev.WebUi.csproj
+++ b/Infraero.Relprev.WebUi/Infraero.Relprev.WebUi.csproj
@@ -27,6 +27,11 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\Infraero.Relprev.HttpClient\Infraero.Relprev.HttpClient.csproj" />
+  </ItemGroup>
+
+
+  <ItemGroup>
     <Content Update="Views\Local\Index.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
