--- a/Infraero.Relprev.WebUi/appsettings.json
+++ b/Infraero.Relprev.WebUi/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Infraero.Relprev.WebUi-BA59C3A9-7909-4C4E-9B78-36A2352D23A5;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Infraero.Relprev.WebUi-BA59C3A9-7909-4C4E-9B78-36A2352D23A5;Trusted_Connection=True;MultipleActiveResultSets=true"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
