insert delete update search

--- a/Infraero.Relprev.Api/Properties/launchSettings.json
+++ b/Infraero.Relprev.Api/Properties/launchSettings.json
@@ -10,12 +10,12 @@
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
+      "commandName": "Project",
       "launchUrl": "api/weatherforecast",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:44372/"
     },
     "Infraero.Relprev.Api": {
       "commandName": "Project",
