--- a/Infraero.Relprev.CrossCutting/Infraero.Relprev.CrossCutting.csproj
+++ b/Infraero.Relprev.CrossCutting/Infraero.Relprev.CrossCutting.csproj
@@ -6,7 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Infraero.Relprev.Application\Infraero.Relprev.Application.csproj" />
   </ItemGroup>
 
 </Project>
