--- a/Infraero.Relprev.Api/appsettings.json
+++ b/Infraero.Relprev.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DFWA06884\\SQLEXPRESS;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-VOBCP3S;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AppSettings": {
     "Secret": "?kI&OA!\\{0YFWFOdp+4zRtpaPubKz1`OULLlM=_q0cGt%qWt'zvNI0=9KQUNqoV", //https://www.grc.com/passwords.htm
