--- a/Infraero.Relprev/Infraero.Relprev.Website/appsettings.json
+++ b/Infraero.Relprev/Infraero.Relprev.Website/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServerConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Infraero.Relprev-88aa51e1-71e6-43fd-87b7-0eef47aef812;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqlServerConnection": "Server=DESKTOP-VOBCP3S;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true",
     "MySqlConnection": "Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;",
     "SqliteConnection": "Data Source=Infraero.Relprev.db"
   },
@@ -10,9 +10,9 @@
     }
   },
   "SendGrid": {
-    "ApiKey": "ADD KEY HERE",
-    "FromEmail": "no-reply@noemail.com",
-    "FromName": "Infraero.Relprev.Website"
+    "ApiKey": "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",
+    "FromEmail": "no-reply@infraero.gov.br",
+    "FromName": "Relprev Suporte"
   },
   "AllowedHosts": "*"
 }
