--- a/Infraero.Relprev.WebUi/appsettings.json
+++ b/Infraero.Relprev.WebUi/appsettings.json
@@ -14,5 +14,8 @@
     "FromEmail": "no-reply@infraero.gov.br",
     "FromName": "Relprev Suporte"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RelprevSettings": {
+    "WebApiBaseUrl": "https://localhost:44372/api/"
+  }
 }
