--- a/Infraero.Relprev.Api/appsettings.json
+++ b/Infraero.Relprev.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-VOBCP3S;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "RelprevDbConnectionString": "Server=DESKTOP-VOBCP3S;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true",
     "OracleConnection": "User Id=I1854413;Password=infraero;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=oraclei.hml.infraero.gov.br)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=homolog)));"
   },
   "AppSettings": {
