versao estavel com coreapiclient + nova webapi

--- a/Infraero.Relprev.Infrastructure/Infraero.Relprev.Infrastructure.csproj
+++ b/Infraero.Relprev.Infrastructure/Infraero.Relprev.Infrastructure.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infraero.Relprev.Application\Infraero.Relprev.Application.csproj" />
-    <ProjectReference Include="..\Infraero.Relprev.HttpClient\Infraero.Relprev.HttpClient.csproj" />
+    <ProjectReference Include="..\Infraero.Relprev.CrossCutting\Infraero.Relprev.CrossCutting.csproj" />
   </ItemGroup>
 
   <ItemGroup>
