versao empresa vinculo + cadastro de usuario

--- a/Infraero.Relprev.WebUi/appsettings.json
+++ b/Infraero.Relprev.WebUi/appsettings.json
@@ -10,7 +10,7 @@
     }
   },
   "SendGrid": {
-    "ApiKey": "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",
+    "ApiKey": "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",
     "FromEmail": "no-reply@infraero.gov.br",
     "FromName": "Relprev Suporte"
   },
