--- a/Infraero.Relprev.WebUi/appsettings.json
+++ b/Infraero.Relprev.WebUi/appsettings.json
@@ -10,7 +10,7 @@
     }
   },
   "SendGrid": {
-    "ApiKey": "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",
+    "ApiKey": "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",
     "FromEmail": "no-reply@infraero.gov.br",
     "FromName": "Relprev Suporte"
   },
