--- a/Infraero.Relprev.Application/Infraero.Relprev.Application.csproj
+++ b/Infraero.Relprev.Application/Infraero.Relprev.Application.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>Infraero.Relprev.Application</RootNamespace>
     <AssemblyName>Infraero.Relprev.Application</AssemblyName>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
+    <RunAnalyzersDuringLiveAnalysis>false</RunAnalyzersDuringLiveAnalysis>
   </PropertyGroup>
 
   <ItemGroup>
