--- a/Infraero.Relprev.WebUi/Infraero.Relprev.WebUi.csproj
+++ b/Infraero.Relprev.WebUi/Infraero.Relprev.WebUi.csproj
@@ -6,6 +6,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UserSecretsId>aspnet-Infraero.Relprev.WebUi-BA59C3A9-7909-4C4E-9B78-36A2352D23A5</UserSecretsId>
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
+    <RunAnalyzersDuringLiveAnalysis>false</RunAnalyzersDuringLiveAnalysis>
   </PropertyGroup>
 
 
