--- a/Infraero.Relprev.CrossCutting/Infraero.Relprev.CrossCutting.csproj
+++ b/Infraero.Relprev.CrossCutting/Infraero.Relprev.CrossCutting.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
+    <RunAnalyzersDuringLiveAnalysis>false</RunAnalyzersDuringLiveAnalysis>
   </PropertyGroup>
 
   <ItemGroup>
