--- a/Infraero.Relprev.WebUi/appsettings.json
+++ b/Infraero.Relprev.WebUi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "SqlServerConnection": "Server=DESKTOP-VOBCP3S;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"RelprevDbConnectionString": "Host=localhost;Port=5432;Pooling=true;Database=ifrrelprevpg;User Id=usr_relprevpg;Password=infraero;",
     "MySqlConnection": "Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;",
     "SqliteConnection": "Data Source=Infraero.Relprev.db"
   },
@@ -17,5 +18,6 @@
   "AllowedHosts": "*",
   "RelprevSettings": {
     "WebApiBaseUrl": "https://localhost:44372/api/"
-  }
+  },
+  "ReCaptcha:SiteKey": "6Le8QN8UAAAAACNzwkTDb1PRCj0NeWs1OUGyszRn"
 }
