--- a/Infraero.Relprev.Application/Infraero.Relprev.Application.csproj
+++ b/Infraero.Relprev.Application/Infraero.Relprev.Application.csproj
@@ -29,4 +29,9 @@
   <ItemGroup>
     <Folder Include="Common\Mappings\" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Http.Features">
+      <HintPath>..\..\..\..\..\.nuget\packages\microsoft.aspnetcore.http.features\2.2.0\lib\netstandard2.0\Microsoft.AspNetCore.Http.Features.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
