--- a/Infraero.Relprev.WebApi/Dockerfile
+++ b/Infraero.Relprev.WebApi/Dockerfile
@@ -1,16 +1,17 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
-#For more information, please see https://aka.ms/containercompat
-
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.0-nanoserver-1903 AS base
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.0-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.0-nanoserver-1903 AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.0-buster AS build
 WORKDIR /src
 COPY ["Infraero.Relprev.WebApi/Infraero.Relprev.WebApi.csproj", "Infraero.Relprev.WebApi/"]
+COPY ["Infraero.Relprev.CrossCutting/Infraero.Relprev.CrossCutting.csproj", "Infraero.Relprev.CrossCutting/"]
+COPY ["Infraero.Relprev.Application/Infraero.Relprev.Application.csproj", "Infraero.Relprev.Application/"]
+COPY ["Infraero.Relprev.Domain/Infraero.Relprev.Domain.csproj", "Infraero.Relprev.Domain/"]
+COPY ["Infraero.Relprev.Infrastructure/Infraero.Relprev.Infrastructure.csproj", "Infraero.Relprev.Infrastructure/"]
 RUN dotnet restore "Infraero.Relprev.WebApi/Infraero.Relprev.WebApi.csproj"
 COPY . .
 WORKDIR "/src/Infraero.Relprev.WebApi"
