--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3.4'
 
 services:
-  infraero.relprev.api:
-    image: ${DOCKER_REGISTRY-}infraerorelprevapi
-    build:
-      context: .
-      dockerfile: Infraero.Relprev.Api\Dockerfile
-
   infraero.relprev.webui:
     image: ${DOCKER_REGISTRY-}infraerorelprevwebui
     build:
       context: .
-      dockerfile: Infraero.Relprev.WebUi\Dockerfile
+      dockerfile: Infraero.Relprev.WebUi/Dockerfile
+
+  infraero.relprev.webapi:
+    image: ${DOCKER_REGISTRY-}infraerorelprevwebapi
+    build:
+      context: .
+      dockerfile: Infraero.Relprev.WebApi/Dockerfile
 
