versao novo dev

--- a/Infraero.Relprev.WebUi/appsettings.json
+++ b/Infraero.Relprev.WebUi/appsettings.json
@@ -13,7 +13,9 @@
   "SendGrid": {
     "ApiKey": "SUA API KEY",
     "FromEmail": "no-reply@infraero.gov.br",
-    "FromName": "Relprev Suporte"
+    "FromName": "Relprev Suporte",
+    "Host": "",
+    "Port": ""
   },
   "AllowedHosts": "*",
   "RelprevSettings": {
