--- a/Infraero.Relprev.Application/Infraero.Relprev.Application.csproj
+++ b/Infraero.Relprev.Application/Infraero.Relprev.Application.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.AspNetCore.Http.Features">
       <HintPath>..\..\..\..\..\.nuget\packages\microsoft.aspnetcore.http.features\2.2.0\lib\netstandard2.0\Microsoft.AspNetCore.Http.Features.dll</HintPath>
+      <Private>true</Private>
     </Reference>
   </ItemGroup>
 </Project>
