--- a/Infraero.Relprev.CrossCutting/Infraero.Relprev.CrossCutting.csproj
+++ b/Infraero.Relprev.CrossCutting/Infraero.Relprev.CrossCutting.csproj
@@ -13,7 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Infraero.Relprev.Application\Infraero.Relprev.Application.csproj" />
+    <ProjectReference Include="..\Infraero.Relprev.Application\Infraero.Relprev.Application.csproj">
+      <Private>true</Private>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
