--- a/Infraero.Relprev.Application/Infraero.Relprev.Application.csproj
+++ b/Infraero.Relprev.Application/Infraero.Relprev.Application.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Dapper" Version="2.0.30" />
     <PackageReference Include="FluentValidation" Version="8.5.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.1" />
     <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.60" />
   </ItemGroup>
