--- a/Infraero.Relprev.WebUi/Infraero.Relprev.WebUi.csproj
+++ b/Infraero.Relprev.WebUi/Infraero.Relprev.WebUi.csproj
@@ -211,6 +211,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\img\resources\" />
+    <Folder Include="wwwroot\pdf\" />
     <Folder Include="wwwroot\vendor\graficos\" />
   </ItemGroup>
 
