--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ BenchmarkDotNet.Artifacts/
 project.lock.json
 project.fragment.lock.json
 artifacts/
+appsettings.json
 
 # StyleCop
 StyleCopReport.xml
@@ -338,3 +339,6 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+
+# Local Log Files
+Logs/
