implementacao regra relato para encripitar telefone

--- a/Infraero.Relprev.CrossCutting/Infraero.Relprev.CrossCutting.csproj
+++ b/Infraero.Relprev.CrossCutting/Infraero.Relprev.CrossCutting.csproj
@@ -13,9 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Infraero.Relprev.Application\Infraero.Relprev.Application.csproj">
-      <Private>true</Private>
-    </ProjectReference>
+    <ProjectReference Include="..\Infraero.Relprev.Application\Infraero.Relprev.Application.csproj" />
   </ItemGroup>
 
 </Project>
