--- a/Infraero.Relprev.WebApi/Infraero.Relprev.WebApi.csproj
+++ b/Infraero.Relprev.WebApi/Infraero.Relprev.WebApi.csproj
@@ -45,6 +45,6 @@
     <Folder Include="Logs\" />
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
