--- a/.gitignore
+++ b/.gitignore
@@ -342,7 +342,7 @@ healthchecksdb
 # Local Log Files
 Logs/
 
-# ignore appsettings
-**/appsettings.development.json
-**/appsettings.staging.json
-**/appsettings.production.json
+# ignore an entire directory
+/Infraero.Relprev.WebApi/Logs/
+/Infraero.Relprev.WebUi/Logs/
+
