--- a/Infraero.Relprev.WebUi/appsettings.json
+++ b/Infraero.Relprev.WebUi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServerConnection": "Server=DESKTOP-VOBCP3S;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqlServerConnection": "Server=DESKTOP-9RGJN31\\SQLEXPRESS;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true",
     //"RelprevDbConnectionString": "Host=localhost;Port=5432;Pooling=true;Database=ifrrelprevpg;User Id=usr_relprevpg;Password=infraero;",
     "MySqlConnection": "Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;",
     "SqliteConnection": "Data Source=Infraero.Relprev.db"
