UC_15_Atribuir Responsáveis Técnicos ao Relato de Prevenção - falta remover atribuição e não exiver responsavel já atribuido.

--- a/Infraero.Relprev.WebUi/Infraero.Relprev.WebUi.csproj
+++ b/Infraero.Relprev.WebUi/Infraero.Relprev.WebUi.csproj
@@ -211,7 +211,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\img\resources\" />
-    <Folder Include="wwwroot\relatoArquivo\" />
+    <Folder Include="wwwroot\RelatoArquivo\" />
     <Folder Include="wwwroot\pdf\" />
     <Folder Include="wwwroot\vendor\graficos\" />
   </ItemGroup>
