caso de uso de cadastro, classificacao e cancelmaneto de relato

--- a/Infraero.Relprev.WebUi/appsettings.json
+++ b/Infraero.Relprev.WebUi/appsettings.json
@@ -10,13 +10,13 @@
             "Default": "Warning"
         }
     },
-    "SendGrid": {
-        "ApiKey": "SUA API KEY",
-        "FromEmail": "no-reply@infraero.gov.br",
-        "FromName": "Relprev Suporte",
-        "Host": "",
-        "Port": ""
-    },
+  "SendGrid": {
+    "ApiKey": "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",
+    "FromEmail": "no-reply@infraero.gov.br",
+    "FromName": "Relprev Suporte",
+    "Host": "",
+    "Port": ""
+  },
     "AllowedHosts": "*",
     "RelprevSettings": {
         "WebApiBaseUrl": "https://localhost:44372/api/"
