--- a/Infraero.Relprev.Domain/Infraero.Relprev.Domain.csproj
+++ b/Infraero.Relprev.Domain/Infraero.Relprev.Domain.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
 </Project>
