--- a/Infraero.Relprev.Infrastructure/Infraero.Relprev.Infrastructure.csproj
+++ b/Infraero.Relprev.Infrastructure/Infraero.Relprev.Infrastructure.csproj
@@ -31,4 +31,8 @@
     </ProjectReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Persistence\MigrationsPg\" />
+  </ItemGroup>
+
 </Project>
