preparação para homologaçao

--- a/Infraero.Relprev.WebUi/appsettings.json
+++ b/Infraero.Relprev.WebUi/appsettings.json
@@ -5,21 +5,30 @@
     "MySqlConnection": "Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;",
     "SqliteConnection": "Data Source=Infraero.Relprev.db"
   },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Warning"
-        }
-    },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
   "SendGrid": {
-    "ApiKey": "sua api aki",
+    "ApiKey": "",
     "FromEmail": "no-reply@infraero.gov.br",
     "FromName": "Relprev Suporte",
     "Host": "",
     "Port": ""
   },
-    "AllowedHosts": "*",
-    "RelprevSettings": {
-        "WebApiBaseUrl": "https://localhost:44372/api/"
-    },
-    "ReCaptcha:SiteKey": "6Le8QN8UAAAAACNzwkTDb1PRCj0NeWs1OUGyszRn"
+  "SmtpClient": {
+    "FromEmail": "no-reply@infraero.gov.br",
+    "FromName": "Relprev Suporte",
+    "Host": "inframail.infraero.gov.br",
+    "Port": "25"
+  },
+  "AllowedHosts": "*",
+  "RelprevSettings": {
+    "WebApiBaseUrl": "https://localhost:44372/api/"
+  },
+  "RelprevParameters": {
+    "TokenTime": "60"
+  },
+  "ReCaptcha:SiteKey": "6Le8QN8UAAAAACNzwkTDb1PRCj0NeWs1OUGyszRn"
 }
