refatoracao vinculo empresa responsavel

--- a/Infraero.Relprev.WebUi/appsettings.json
+++ b/Infraero.Relprev.WebUi/appsettings.json
@@ -11,7 +11,7 @@
     }
   },
   "SendGrid": {
-    "ApiKey": "",
+    "ApiKey": "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",
     "FromEmail": "no-reply@infraero.gov.br",
     "FromName": "Relprev Suporte",
     "Host": "",
