--- a/Infraero.Relprev.WebUi/appsettings.json
+++ b/Infraero.Relprev.WebUi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RelprevDbConnectionString": "Server=DESKTOP-VOBCP3S;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "RelprevDbConnectionString": "Server=DESKTOP-9RGJN31\\SQLEXPRESS;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true",
     //"RelprevDbConnectionString": "Host=localhost;Port=5432;Pooling=true;Database=ifrrelprevpg;User Id=usr_relprevpg;Password=infraero;",
     "MySqlConnection": "Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;",
     "SqliteConnection": "Data Source=Infraero.Relprev.db"
@@ -11,7 +11,7 @@
     }
   },
   "SendGrid": {
-    "ApiKey": "",
+    "ApiKey": "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",
     "FromEmail": "no-reply@infraero.gov.br",
     "FromName": "Relprev Suporte",
     "Host": "",
