excluido migração primaria com erro

--- a/Infraero.Relprev.Infrastructure/Infraero.Relprev.Infrastructure.csproj
+++ b/Infraero.Relprev.Infrastructure/Infraero.Relprev.Infrastructure.csproj
@@ -40,4 +40,8 @@
     </ProjectReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Persistence\MigrationsPg\" />
+  </ItemGroup>
+
 </Project>
