--- a/Infraero.Relprev.WebUi/appsettings.json
+++ b/Infraero.Relprev.WebUi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "RelprevDbConnectionString": "Server=DESKTOP-VOBCP3S;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true",
-    //"RelprevDbConnectionString": "Host=localhost;Port=5432;Pooling=true;Database=ifrrelprevpg;User Id=usr_relprevpg;Password=infraero;",
+    //"RelprevDbConnectionString": "Server=DESKTOP-VOBCP3S;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "RelprevDbConnectionString": "Host=localhost;Port=5432;Pooling=true;Database=ifrrelprevpg;User Id=usr_relprevpg;Password=infraero;",
     "MySqlConnection": "Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;",
     "SqliteConnection": "Data Source=Infraero.Relprev.db"
   },
