--- a/Infraero.Relprev.WebApi/appsettings.json
+++ b/Infraero.Relprev.WebApi/appsettings.json
@@ -7,7 +7,7 @@
     },
   "ConnectionStrings": {
     //"RelprevDbConnectionString": "Server=DESKTOP-VOBCP3S;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "RelprevDbConnectionString": "Host=localhost;Port=5432;Pooling=true;Database=ifrrelprevpg;User Id=usr_relprevpg;Password=infraero;",
+    "RelprevDbConnectionString": "Host=localhost;Port=5432;Pooling=true;Database=ifrrelprev;User Id=usr_relprev;Password=infraero;",
     "OracleDbConnectionString": "User Id=I1854413;Password=infraero;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=oraclei.hml.infraero.gov.br)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=homolog)));"
   },
     "Serilog": {
