--- a/Infraero.Relprev.WebUi/appsettings.json
+++ b/Infraero.Relprev.WebUi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     //"RelprevDbConnectionString": "Server=DESKTOP-VOBCP3S;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"RelprevDbConnectionString": "Host=localhost;Port=5432;Pooling=true;Database=ifrrelprev;User Id=usr_relprev;Password=infraero;",
     "RelprevDbConnectionString": "Host=10.0.19.84;Port=5432;Pooling=true;Database=ifrrelprev;User Id=usr_relprev;Password=infraero;",
     "MySqlConnection": "Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;",
     "SqliteConnection": "Data Source=Infraero.Relprev.db"
