--- a/Infraero.Relprev.WebApi/appsettings.json
+++ b/Infraero.Relprev.WebApi/appsettings.json
@@ -1,39 +1,39 @@
 {
-    "AppSettings": {
-        "AppPrefixPath": "",
-        "AllowedOrigins": [ "http://localhost:5000" ],
-        "JwtSecretKey": "ABC8d9d8d28-9453-4db4-a012-836093c1b823e048f669-9f26-4efb-94ac-579a4daff11fe058a4b5-7aec-4e9b-ba14-ead007ac58a0XYZ",
-        "WebApiUrl": "https://jsonplaceholder.typicode.com/todos/"
-    },
-  "ConnectionStrings": {
-    //"RelprevDbConnectionString": "Server=DESKTOP-VOBCP3S;Database=ifrrelprevpg;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "RelprevDbConnectionString": "Host=localhost;Port=5432;Pooling=true;Database=ifrrelprev;User Id=usr_relprev;Password=infraero;",
-    //"RelprevDbConnectionString": "Host=10.0.19.84;Port=5432;Pooling=true;Database=ifrrelprev;User Id=usr_relprev;Password=infraero;",
-    "OracleDbConnectionString": "User Id=I1854413;Password=infraero;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=oraclei.hml.infraero.gov.br)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=homolog)));"
+  "AppSettings": {
+    "AppPrefixPath": "",
+    "AllowedOrigins": [ "http://localhost:5000" ],
+    "JwtSecretKey": "ABC8d9d8d28-9453-4db4-a012-836093c1b823e048f669-9f26-4efb-94ac-579a4daff11fe058a4b5-7aec-4e9b-ba14-ead007ac58a0XYZ",
+    "WebApiUrl": "https://jsonplaceholder.typicode.com/todos/"
   },
-    "Serilog": {
-        "MinimumLevel": {
-            "Default": "Information",
-            "Override": {
-                "Microsoft": "Warning",
-                "System": "Error"
-            }
-        },
-        "WriteTo": [
+  "ConnectionStrings": {
+    "RelprevDbConnectionString": "Host=10.0.19.84;Port=5432;Pooling=true;Database=ifrrelprev;User Id=t928692703;Password=infraero;",
+    "OracleDbConnectionString": "User Id=I1854413;Password=infraero;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=oraclei.hml.infraero.gov.br)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=homolog)));"
+    //"RelprevDbConnectionString": "Host=localhost;Port=5432;Pooling=true;Database=ifrrelprev;User Id=usr_relprev;Password=infraero;",
+    //"OracleDbConnectionString": "User Id=I1854413;Password=infraero;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=oraclei.hml.infraero.gov.br)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=homolog)));"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Error"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
             {
-                "Name": "Async",
-                "Args": {
-                    "configure": [
-                        {
-                            "Name": "RollingFile",
-                            "Args": {
-                                "pathFormat": "Logs/log-{Date}.txt",
-                                "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
-                            }
-                        }
-                    ]
-                }
+              "Name": "RollingFile",
+              "Args": {
+                "pathFormat": "Logs/log-{Date}.txt",
+                "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
+              }
             }
-        ]
-    }
+          ]
+        }
+      }
+    ]
+  }
 }
