--- a/Infraero.Relprev.WebUi/appsettings.json
+++ b/Infraero.Relprev.WebUi/appsettings.json
@@ -22,5 +22,10 @@
   "RelprevParameters": {
     "TokenTime": "60"
   },
-  "ReCaptcha:SiteKey": "6Le8QN8UAAAAACNzwkTDb1PRCj0NeWs1OUGyszRn"
+  //relprev - infraero.gov.br
+  "ReCaptcha:SiteKey": "6Le8QN8UAAAAACNzwkTDb1PRCj0NeWs1OUGyszRn",
+  "ReCaptcha:SecretKey": "6Le8QN8UAAAAADUKGkGjCHf-ZvA4osbSH2LIo_an"
+  //relprev - localhost + infraero.gov.br
+  //"ReCaptcha:SiteKey": "6Le7QN8UAAAAAEmIEiMi0oI_9WCEj_QCubPfDWOw",
+  //"ReCaptcha:SecretKey": "6Le7QN8UAAAAAIxmiTzFLDdjSPYJVw0gQIzb4L0d"
 }
